2004-02-10  Paolo Nenzi <p.nenzi@ieee.org>

	*   src/frontend/inpcom.c: Applied patch from Dietmar Warning 
	    to solve the bug discovered by Jelle Haandrikman: wrong 
	    subcircuit expansion when leading spaces are present in the
	    subcircuit netlist. 

2004-01-28  Paolo Nenzi <p.nenzi@ieee.org>

	*   configure.in: changed version to rework15.

2004-01-27  Paolo Nenzi <p.nenzi@ieee.org>

	*   configure.in: changed version to rework15-pre3 and other
	    small changes for release.
	
	*   AUTHORS, FAQ: Updates

	*   src/spicelib/devices/bjt/bjtpzld.c, 
	    src/spicelib/devices/bjt2/bjt2pzld.c: there was an error
	    in the pole-zero routine. The collector resistance was
	    loaded into the matrix instead of the condictance.

        *   inpdomod.c: Updated HiSIM level to 64.

	*   src/spicelib/devices/vbic/*, src/Makefile.am, 
	    src/spicelib/devices/dev.c, src/spicelibe/parser/inp2q.c,
	    src/spicelib/parser/inpdomod.c,src/spicelib/devices/Makefile.am,
	    tests/vbic, contrib/vbic, DEVICES: Added VBIC model from
	    Dietmar Warning <warning@danalyse.de>. This is the 3 terminal
	    model without excess phase and termal network.

2004-01-26  Paolo Nenzi <p.nenzi@ieee.org>

	*   DEVICES: updated isrc an vsrc status

	*   src/spicelib/devices{isrc,vsrc}: Cleaned up code
	    

	*   tests/cider: Added example files for cider simulator.

2004-01-25  Paolo Nenzi <p.nenzi@ieee.org>

	*   configure.in, acconfig.h: Added configure options for the
	    following debug symbols: ASDEBUG, D_DBG_BLOCKTIMES,
	    D_DBG_SMALLTIMES, NEWPRED.

2004-01-23  Paolo Nenzi <p.nenzi@ieee.org>

	*   xgraph: Added xgraph plotting program. It can be added to
	    the ngspice binaries by adding --enable-xgraph in the 
	    configuration phase. 

2004-01-21  Paolo Nenzi <p.nenzi@ieee.org>

	*   src/include/ifsim.h, src/include/cktdefs.h, src/frontend/spiceif.c,
	    src/frontend/shyu.c, src/spicelib/cktntask.c: Applied the options 